@@ -37,6 +37,7 @@ OTHER CONTRIBUTORS
 	Paul Chambers
 	Stephen Davies
 	Yuri D'Elia
+	Domingo Alvarez Duarte
 	Greg Ercolano
 	Yuri Fedorchenko
 	George Garvey
