@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.3.0
 
+	- Fixed Fl_Tabs selection border drawing, if tabs are at the bottom
+	  of the widget (STR #2480)
 	- Much faster fl_read_image() for Windows (STR #2387).
 	- Added general Options dialog (STR #2471)
 	- Fixed Compiling with mingw-w64 (STR #2308).
